--- a/css/request_list.css
+++ b/css/request_list.css
@@ -207,7 +207,7 @@ hr {
   flex-shrink: 0;
   margin-right: 0.25rem;
 }
-.region_name a {
+.region_choose {
   color: #757575;
   text-align: right;
   font-family: Inter;
@@ -216,6 +216,7 @@ hr {
   font-weight: 700;
   line-height: normal;
   text-decoration-line: underline;
+  cursor: pointer;
 }
 
 .request_header p {
@@ -296,8 +297,9 @@ hr {
   line-height: normal;
 }
 .point_container img {
-  width: 4.375rem;
-  height: 4.375rem;
+  width: 2.3125rem;
+  height: 2rem;
+  margin: 0.44rem 0.69rem;
 }
 .chat_container {
   display: flex;
@@ -341,7 +343,7 @@ hr {
   padding-left: 1.03rem;
 }
 
-.requestList_footer {
+.request_list_footer {
   display: flex;
   flex-direction: row;
   margin-top: 2.99rem;
