--- a/css/find_id_pw.css
+++ b/css/find_id_pw.css
@@ -133,7 +133,7 @@ body {
 .bottom_findID_header img {
   width: 12.5rem;
   height: 12.5rem;
-  flex-shrink: 0;
+  margin: 20px;
 }
 
 .wrap_findID_content {
