--- a/css/request_change.css
+++ b/css/request_change.css
@@ -161,7 +161,6 @@ hr {
 }
 
 .wrap_request {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -169,11 +168,12 @@ hr {
 }
 
 .request_header {
-  position: absolute;
-  left: 27rem;
   display: flex;
+  flex-direction: row;
   margin-top: 1.25rem;
+  width: 60.875rem;
   margin-bottom: 0;
+  margin-left: 12.44rem;
 }
 
 #request_box2 {
@@ -237,7 +237,6 @@ hr {
   border-radius: 1.25rem;
   border: 3px solid #c2d3f5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-top: 4.337rem;
 }
 
 .title_container,
