--- a/css/request_list.css
+++ b/css/request_list.css
@@ -161,7 +161,6 @@ hr {
 }
 
 .wrap_request {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -169,11 +168,12 @@ hr {
 }
 
 .request_header {
-  position: absolute;
-  left: 27rem;
   display: flex;
+  flex-direction: row;
   margin-top: 1.25rem;
+  width: 60.875rem;
   margin-bottom: 0;
+  margin-left: 12.44rem;
 }
 
 #request_box {
@@ -233,12 +233,12 @@ hr {
 .wrap_request_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 60.875rem;
   height: 69.30056rem;
   border-radius: 1.25rem;
   border: 1px solid #c8c8c8;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-top: 4.37rem;
 }
 
 .request_container {
