--- a/css/solve_self.css
+++ b/css/solve_self.css
@@ -161,7 +161,6 @@ hr {
 }
 
 .wrap_solve {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -169,11 +168,12 @@ hr {
 }
 
 .solve_header {
-  position: absolute;
-  left: 27rem;
   display: flex;
+  flex-direction: row;
   margin-top: 1.25rem;
+  width: 60.875rem;
   margin-bottom: 0;
+  margin-left: 12.44rem;
 }
 
 #solve_box2 {
@@ -219,16 +219,6 @@ hr {
   cursor: pointer;
 }
 
-.request_container {
-  width: 59.375rem;
-  height: 29.25rem;
-  flex-shrink: 0;
-  border-radius: 1.25rem;
-  border: 3px solid #c2d3f5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-top: 4.337rem;
-}
-
 .solve_container {
   width: 59.375rem;
   height: 29.25rem;
@@ -236,7 +226,6 @@ hr {
   border-radius: 1.25rem;
   border: 3px solid #c2d3f5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-top: 4.337rem;
   padding-left: 1.25rem;
   padding-right: 1.19rem;
   padding-top: 1.25rem;
