--- a/css/home_login.css
+++ b/css/home_login.css
@@ -3,7 +3,7 @@ body {
   margin-left: 9.94rem;
   margin-right: 10.69rem;
   margin-bottom: 7.31rem;
-  min-width: 85rem;
+  width: 85rem;
 }
 
 .nav_bar {
