--- a/css/find_id_result.css
+++ b/css/find_id_result.css
@@ -46,11 +46,20 @@ body {
 }
 
 .email_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 24.9375rem;
   height: 8.57738rem;
   flex-shrink: 0;
   border-radius: 3rem;
   border: 1px solid #000;
+  color: #000;
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 #find_id_result_login_button {
