--- a/css/pw_change.css
+++ b/css/pw_change.css
@@ -205,7 +205,7 @@ hr {
     padding-left: 7.78rem;
 }
 
-.wrap_change p {
+.wrap_change .pp {
     margin: 0;
     margin-bottom: 0.31rem;
     margin-left: 0.94rem;
@@ -221,6 +221,26 @@ hr {
     border: 1px solid #9B9B9B;
     font-size: 1.125rem;
     padding: 1rem;
+}
+
+.not_present {
+    color: #F00;
+    margin: 0;
+    margin-top: 0.1rem;
+    margin-left: 0.94rem;
+    font-size: 1rem;
+    font-weight: 600;
+    display: none;
+}
+
+.not_match {
+    color: #F00;
+    margin: 0;
+    margin-top: 0.1rem;
+    margin-left: 0.94rem;
+    font-size: 1rem;
+    font-weight: 600;
+    display: none;
 }
 
 .wrap_btn {
