--- a/css/my_post.css
+++ b/css/my_post.css
@@ -175,7 +175,7 @@ hr {
 .container {
     position: relative;
     margin: 0 auto;
-    height: 75rem;
+    height: 80rem;
     min-width: 100rem;
     overflow: hidden;
 }
@@ -188,6 +188,13 @@ hr {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin: 0 auto;
     margin-top: 4.37rem;
+}
+
+.wrap_post a {
+    width: 57.5625rem;
+    /* height: 14.9375rem; */
+    height: 1rem;
+    cursor: pointer;
 }
 
 .post {
@@ -295,4 +302,39 @@ hr {
     margin: 0;
     margin-left: 1.03rem;
     margin-top: 1.19rem;
+}
+
+.wrap_num {
+    width: 60.875rem;
+    height: 1.5rem;
+    margin: 0 auto;
+    margin-top: 3.37rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.wrap_num img {
+    width: 1.25rem;
+    height: 1rem;
+    cursor: pointer;
+}
+
+.wrap_num button {
+    color: #636363;
+    line-height: 0;
+    font-size: 1.25rem;
+    font-weight: 500;
+    width: 1.25rem;
+    height: 1rem;
+    padding: 0;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+}
+
+.wrap_num .num_btn.checked {
+    color: #3a7dff;
+    font-size: 1.5625rem;
+    font-weight: 700;
 }
