--- a/css/signup.css
+++ b/css/signup.css
@@ -60,7 +60,6 @@ body {
 }
 
 #email_input,
-#certifiednum_input,
 #password_input,
 #pw_check_input,
 #name_input,
@@ -75,7 +74,6 @@ body {
 }
 
 #email_input::placeholder,
-#certifiednum_input::placeholder,
 #password_input::placeholder,
 #pw_check_input::placeholder,
 #name_input::placeholder,
@@ -110,22 +108,13 @@ body {
 }
 
 .check_message,
-.certify_message,
 .pw_message,
 .nickname_message {
   display: none;
 }
 
-#email_check_message {
-  color: #3a7dff;
-  font-family: Inter;
-  font-size: 0.75rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
-#certify_message {
+#email_check_message,
+#certified_check_message {
   color: #3a7dff;
   font-family: Inter;
   font-size: 0.75rem;
