--- a/css/solve_self.css
+++ b/css/solve_self.css
@@ -241,7 +241,7 @@ hr {
 }
 
 .title_container {
-  /* width: 55.125rem; */
+  width: 55.125rem;
   height: 2.875rem;
   flex-shrink: 0;
   border-radius: 0.9375rem;
@@ -293,6 +293,8 @@ hr {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  width: 3rem;
+  border: none;
 }
 
 .detail_chat {
@@ -360,7 +362,7 @@ hr {
 }
 
 .content_container {
-  /* width: 55.125rem; */
+  width: 55.125rem;
   height: 18.4375rem;
   flex-shrink: 0;
   border-radius: 0.9375rem;
