--- a/css/signup.css
+++ b/css/signup.css
@@ -107,14 +107,10 @@ body {
   cursor: pointer;
 }
 
-.check_message,
-.pw_message,
-.nickname_message {
-  display: none;
-}
-
 #email_check_message,
-#certified_check_message {
+#certified_check_message,
+#nickname_message {
+  display: none;
   color: #3a7dff;
   font-family: Inter;
   font-size: 0.75rem;
@@ -125,7 +121,8 @@ body {
 
 #email_duplicate_message,
 #pw_message,
-#nickname_message {
+#nickname_error_message {
+  display: none;
   color: #f00;
   font-family: Inter;
   font-size: 0.75rem;
