--- a/css/login.css
+++ b/css/login.css
@@ -119,7 +119,7 @@ body {
   border: none;
   background: #3a7dff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-bottom: 0.81rem;
+  /* margin-bottom: 0.81rem; */
 }
 
 #email_login_button a {
@@ -132,7 +132,7 @@ body {
   text-decoration: none;
 }
 
-#google_login_button {
+/* #google_login_button {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -162,7 +162,7 @@ body {
 
 #google_login_button div img {
   margin-left: 2.88rem;
-}
+} */
 
 .login_footer {
   display: flex;
