--- a/css/chat.css
+++ b/css/chat.css
@@ -101,6 +101,7 @@ a {
     color: #fff;
     margin-left: 5.63rem;
     margin-top: 6.94rem;
+    opacity: 0;
 }
 
 .chat_btn:hover {
@@ -615,6 +616,7 @@ hr {
     margin-top: 0.8rem;
     width: 1.25rem;
     height: 1.25rem;
+    cursor: pointer;
 }
 
 .wrap_number {
@@ -652,4 +654,52 @@ hr {
 
 .send_btn:hover {
     cursor: pointer;
+}
+
+
+/* 이모티콘 */
+
+.chat_area.checked {
+    height: 6.92rem;
+    margin-top: 1.26rem;
+    overflow: auto;
+}
+
+.input_area.checked {
+    background-color: white;
+    height: 11.63381rem;
+    border-radius: 0.625rem;
+    margin-top: 1.25rem;
+    overflow: hidden;
+}
+
+.emoticon_area {
+    overflow: auto;
+    margin-top: 0.42rem;
+    margin-left: 0.72rem;
+    width: 36.4rem;
+    height: 8rem;
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.emoticon_area img {
+    width: 8rem;
+    height: 8rem;
+    cursor: pointer;
+}
+
+.emoticon.checked {
+    background-color: #E6EEFF;
+    border-radius: 1.875rem;
+}
+
+.emoticon_area::-webkit-scrollbar {
+    width: 6px;
+}
+
+.emoticon_area::-webkit-scrollbar-thumb {
+    background: #757575;
+    border-radius: 10px;
 }
