--- a/css/request_list.css
+++ b/css/request_list.css
@@ -26,7 +26,7 @@ a {
 .nav_bar {
   display: flex;
   justify-content: center;
-  min-width: 100rem;
+  width: 110rem;
 }
 
 .back_btn {
@@ -157,14 +157,14 @@ a {
 
 hr {
   margin: 0 6.94rem;
-  min-width: 85rem;
+  width: 90rem;
 }
 
 .wrap_request {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 100rem;
+  width: 110rem;
 }
 
 .request_header {
@@ -216,6 +216,21 @@ hr {
   font-weight: 700;
   line-height: normal;
   text-decoration-line: underline;
+  cursor: pointer;
+}
+.dropdown {
+  border: 1px solid #ccc;
+  background-color: white;
+  position: absolute;
+  width: 130px;
+  max-height: 200px;
+  overflow-y: auto;
+  top: 242px;
+  left: 760px;
+  padding: 0px 15px;
+}
+.dropdown-option {
+  padding: 5px;
   cursor: pointer;
 }
 
