--- a/css/request_list.css
+++ b/css/request_list.css
@@ -1,418 +1,429 @@
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 75rem;
+    height: 100vh;
 }
 
 * {
-  box-sizing: border-box;
-  font-family: "Inter", sans-serif;
-  /* letter-spacing: -0.1rem; */
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    /* letter-spacing: -0.1rem; */
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .nav_bar {
-  display: flex;
-  justify-content: center;
-  width: 110rem;
+    display: flex;
+    justify-content: center;
+    width: 90rem;
 }
 
 .back_btn {
-  display: flex;
-  margin-left: 6.94rem;
-  margin-top: 6.5rem;
-  margin-right: 4rem;
+    display: flex;
+    margin-left: 6.94rem;
+    margin-top: 6.5rem;
+    margin-right: 4rem;
 }
 
 .logo_btn img {
-  width: 9.375rem;
-  height: 9.375rem;
-  margin-top: 2.56rem;
+    width: 9.375rem;
+    height: 9.375rem;
+    margin-top: 2.56rem;
 }
 
 .nav_menu {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 1.7rem;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 1.7rem;
 }
 
 .nav_menu ul {
-  display: flex;
-  flex-direction: row;
-  margin-top: 6.5rem;
+    display: flex;
+    flex-direction: row;
+    margin-top: 6.5rem;
 }
 
 .help_req_a {
-  color: #939393;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.875rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-right: 3.56rem;
+    color: #939393;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.875rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-right: 3.56rem;
 }
 
 .help_sol_a {
-  color: #3a7dff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.875rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+    color: #3a7dff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.875rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
 .nav_chat {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 0.94rem;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 0.94rem;
 }
 
 .chat_btn {
-  width: 9.4375rem;
-  height: 2.8125rem;
-  border: 2px solid #727272;
-  border-radius: 1.25rem;
-  background-color: #727272;
-  font-size: 1.25rem;
-  font-weight: 700;
-  color: #fff;
-  margin-left: 5.63rem;
-  margin-top: 6.94rem;
+    width: 9.4375rem;
+    height: 2.8125rem;
+    border: 2px solid #727272;
+    border-radius: 1.25rem;
+    background-color: #727272;
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: #fff;
+    margin-left: 5.63rem;
+    margin-top: 6.94rem;
 }
 
 .chat_btn:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .nav_logout {
-  display: flex;
-  align-items: center;
-  margin-left: 1.94rem;
-  margin-right: 1.37rem;
-  margin-top: 7.62rem;
+    display: flex;
+    align-items: center;
+    margin-left: 1.94rem;
+    margin-right: 1.37rem;
+    margin-top: 7.62rem;
 }
 
 .nav_logout a {
-  width: 4.1875rem;
-  height: 1.375rem;
-  flex-shrink: 0;
-  color: #000;
-  font-family: Inter;
-  font-size: 0.9375rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+    width: 4.1875rem;
+    height: 1.375rem;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Inter;
+    font-size: 0.9375rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .nav_logout img {
-  width: 1.5rem;
-  height: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .nav_logout img:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .nav_mypage {
-  display: flex;
-  align-items: center;
-  margin-top: 7.62rem;
-  margin-right: 6.81rem;
+    display: flex;
+    align-items: center;
+    margin-top: 7.62rem;
+    margin-right: 6.81rem;
 }
 
 .nav_mypage img {
-  width: 1.5rem;
-  height: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .nav_mypage img:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .nav_mypage a {
-  width: 4.75rem;
-  height: 1.375rem;
-  flex-shrink: 0;
-  color: #000;
-  font-family: Inter;
-  font-size: 0.9375rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+    width: 4.75rem;
+    height: 1.375rem;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Inter;
+    font-size: 0.9375rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 hr {
-  margin: 0 6.94rem;
-  width: 90rem;
+    margin: 0 6.94rem;
+    width: 85rem;
 }
 
 .wrap_request {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 110rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 94rem;
 }
 
 .request_header {
-  display: flex;
-  flex-direction: row;
-  margin-top: 1.25rem;
-  width: 60.875rem;
-  margin-bottom: 0;
-  margin-left: 12.44rem;
+    display: flex;
+    flex-direction: row;
+    margin-top: 1.25rem;
+    width: 60.875rem;
+    margin-bottom: 0;
+    margin-left: 12.44rem;
 }
 
 #request_box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 15.625rem;
-  height: 3.125rem;
-  flex-shrink: 0;
-  border-radius: 1.25rem 1.25rem 0rem 0rem;
-  background: #3a7dff;
-  color: #fff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.5625rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  /* margin-left: 12.44rem; */
-  margin-right: 1.06rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15.625rem;
+    height: 3.125rem;
+    flex-shrink: 0;
+    border-radius: 1.25rem 1.25rem 0rem 0rem;
+    background: #3a7dff;
+    color: #fff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.5625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    /* margin-left: 12.44rem; */
+    margin-right: 1.06rem;
 }
 
 .region_name {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
+
 .region_name img {
-  width: 1.25rem;
-  height: 1.75925rem;
-  flex-shrink: 0;
-  margin-right: 0.25rem;
+    width: 1.25rem;
+    height: 1.75925rem;
+    flex-shrink: 0;
+    margin-right: 0.25rem;
 }
+
 .region_choose {
-  color: #757575;
-  text-align: right;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-decoration-line: underline;
-  cursor: pointer;
+    color: #757575;
+    text-align: right;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+    cursor: pointer;
 }
+
 .dropdown {
-  border: 1px solid #ccc;
-  background-color: white;
-  position: absolute;
-  width: 130px;
-  max-height: 200px;
-  overflow-y: auto;
-  top: 242px;
-  left: 760px;
-  padding: 0px 15px;
+    border: 1px solid #ccc;
+    background-color: white;
+    position: absolute;
+    width: 130px;
+    max-height: 200px;
+    overflow-y: auto;
+    top: 242px;
+    left: 640px;
+    padding: 0px 15px;
 }
+
 .dropdown-option {
-  padding: 5px;
-  cursor: pointer;
+    padding: 5px;
+    cursor: pointer;
 }
 
 .request_header p {
-  color: #ff7a7a;
-  font-family: Inter;
-  font-size: 0.9375rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-left: 1.06rem;
-  /* margin-right: 31.69rem; */
+    color: #ff7a7a;
+    font-family: Inter;
+    font-size: 0.9375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 1.06rem;
+    /* margin-right: 31.69rem; */
 }
 
 .wrap_request_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 60.875rem;
-  height: 69.30056rem;
-  border-radius: 1.25rem;
-  border: 1px solid #c8c8c8;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60.875rem;
+    height: 69.30056rem;
+    border-radius: 1.25rem;
+    border: 1px solid #c8c8c8;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .request_container {
-  display: flex;
-  flex-direction: column;
-  width: 57.5625rem;
-  height: 14.9375rem;
-  border-radius: 1.25rem;
-  border: 3px solid #c2d3f5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin: 1.185rem 1.41rem;
-  padding-top: 1.25rem;
-  padding-bottom: 1.37rem;
-  padding-left: 1.25rem;
-  padding-left: 1.19rem;
-  cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    width: 57.5625rem;
+    height: 14.9375rem;
+    border-radius: 1.25rem;
+    border: 3px solid #c2d3f5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin: 1.185rem 1.41rem;
+    padding-top: 1.25rem;
+    padding-bottom: 1.37rem;
+    padding-left: 1.25rem;
+    padding-left: 1.19rem;
+    cursor: pointer;
 }
 
 .top_container {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 0.81rem;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.81rem;
 }
+
 .title_container {
-  width: 37.25rem;
-  height: 2.875rem;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-
-  color: #242424;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  padding-left: 1.03rem;
-  padding-top: 0.5rem;
+    width: 37.25rem;
+    height: 2.875rem;
+    border-radius: 0.9375rem;
+    border: 1px solid #c2d3f5;
+    background: #fff;
+    color: #242424;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-left: 1.03rem;
+    padding-top: 0.5rem;
 }
+
 .point_container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 8.5rem;
-  height: 2.875rem;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-  margin-left: 0.5rem;
-  margin-right: 0.44rem;
-
-  color: #242424;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 8.5rem;
+    height: 2.875rem;
+    border-radius: 0.9375rem;
+    border: 1px solid #c2d3f5;
+    background: #fff;
+    margin-left: 0.5rem;
+    margin-right: 0.44rem;
+    color: #242424;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
+
 .point_container img {
-  width: 2.3125rem;
-  height: 2rem;
-  margin: 0.44rem 0.69rem;
+    width: 2.3125rem;
+    height: 2rem;
+    margin: 0.44rem 0.69rem;
 }
-.chat_container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 8.4375rem;
-  height: 2.875rem;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
 
-  color: #242424;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+.chat_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 8.4375rem;
+    height: 2.875rem;
+    border-radius: 0.9375rem;
+    border: 1px solid #c2d3f5;
+    background: #fff;
+    color: #242424;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
+
 .chat_container img {
-  width: 2.3125rem;
-  height: 2rem;
-  margin: 0.44rem 0.69rem;
+    width: 2.3125rem;
+    height: 2rem;
+    margin: 0.44rem 0.69rem;
 }
 
 .content_container {
-  display: flex;
-  width: 55.125rem;
-  height: 8.625rem;
-  flex-shrink: 0;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-
-  color: #242424;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  padding-top: 1.19rem;
-  padding-left: 1.03rem;
+    display: flex;
+    width: 55.125rem;
+    height: 8.625rem;
+    flex-shrink: 0;
+    border-radius: 0.9375rem;
+    border: 1px solid #c2d3f5;
+    background: #fff;
+    color: #242424;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-top: 1.19rem;
+    padding-left: 1.03rem;
 }
 
 .request_list_footer {
-  display: flex;
-  flex-direction: row;
-  margin-top: 2.99rem;
-  margin-bottom: 11.65rem;
+    display: flex;
+    flex-direction: row;
+    margin-top: 2.99rem;
+    margin-bottom: 11.65rem;
 }
+
 #footer_back {
-  width: 1.25rem;
-  height: 0.78125rem;
-  filter: opacity(0.5) drop-shadow(0 0 0 #e7e7e7);
+    width: 1.25rem;
+    height: 0.78125rem;
+    filter: opacity(0.5) drop-shadow(0 0 0 #e7e7e7);
 }
+
 #footer_1 {
-  width: 2.8125rem;
-  height: 3.25rem;
-  flex-shrink: 0;
-  color: #3a7dff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
+    width: 2.8125rem;
+    height: 3.25rem;
+    flex-shrink: 0;
+    color: #3a7dff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
+
 #footer_2,
 #footer_3,
 #footer_4,
 #footer_5 {
-  width: 2.8125rem;
-  height: 3.25rem;
-  flex-shrink: 0;
-  color: #636363;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+    width: 2.8125rem;
+    height: 3.25rem;
+    flex-shrink: 0;
+    color: #636363;
+    text-align: center;
+    font-family: Inter;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
+
 #footer_next {
-  width: 1.25rem;
-  height: 0.78125rem;
+    width: 1.25rem;
+    height: 0.78125rem;
 }
 
 .content {
-  font-size: 16px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+    font-size: 16px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .title {
-  font-size: 22px;
-  font-weight: 550;
-  white-space: nowrap;
-  overflow: hidden; /* 너무 길 경우 넘치는 부분을 숨김 */
-  text-overflow: ellipsis; /* 너무 길 경우 생략 (...) 표시 */
+    font-size: 22px;
+    font-weight: 550;
+    white-space: nowrap;
+    overflow: hidden;
+    /* 너무 길 경우 넘치는 부분을 숨김 */
+    text-overflow: ellipsis;
+    /* 너무 길 경우 생략 (...) 표시 */
 }
